tests/negative/pending/type_division_by_zero_const.uzpp
// XATOLIK_KUTILMOQDA: cpp_level: kompilyatsiya vaqtida nolga bo'lish
ulash "uzpp_runtime.hpp"
butun asosiy() {
    butun x = 10 / 0;
    yozish << x << qator_oxiri;
    qaytarish 0;
}
